RESOLVED FIXED63459
[Qt][WK2] Random crashes in fast/frames/ tests
https://bugs.webkit.org/show_bug.cgi?id=63459
Summary [Qt][WK2] Random crashes in fast/frames/ tests
Chang Shu
Reported 2011-06-27 08:45:15 PDT
Random crashes have been observed in running layout tests under /fast/frames, such as fast/frames/negative-remaining-length-crash.html
Attachments
patch (1.79 KB, patch)
2011-06-27 08:59 PDT, Chang Shu
no flags
patch 2 (1.78 KB, patch)
2011-06-28 11:01 PDT, Chang Shu
no flags
Chang Shu
Comment 1 2011-06-27 08:59:42 PDT
Chang Shu
Comment 2 2011-06-28 11:01:41 PDT
Created attachment 98941 [details] patch 2 Use QMetaObject::invokeMethod as suggested by kling. The code is cleaner.
Andreas Kling
Comment 3 2011-06-28 11:07:35 PDT
Comment on attachment 98941 [details] patch 2 r=me
Chang Shu
Comment 4 2011-06-28 12:01:21 PDT
*** Bug 63006 has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 5 2011-06-28 12:01:41 PDT
Comment on attachment 98941 [details] patch 2 Clearing flags on attachment: 98941 Committed r89947: <http://trac.webkit.org/changeset/89947>
WebKit Review Bot
Comment 6 2011-06-28 12:01:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.